2007-09-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* src/connection-editor: new connection editor.

	* configure.ac: added connection editor to the build.

2007-09-16  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (read_connection_from_gconf, copy_connection_to_gconf): use new
			NMSettings value enumeration functions from libnm-util to
			simplify read/write of settings from GConf

2007-09-14  Dan Williams  <dcbw@redhat.com>

	* configure.ac
	  src/Makefile.am
	  src/applet-compat.c
	  src/applet-compat.h
	  src/applet.c
	  src/applet.h
		- Handle removal of unused stuff from libnm-util

2007-09-14  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (applet_dbus_connection_settings_new_from_connection,
		   applet_dbus_connection_settings_get_id,
		   applet_dbus_connection_settings_get_settings,
		   applet_dbus_connection_settings_get_secrets): a bit of extra
			validation of NMConnection objects

2007-09-14  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (copy_connection_to_gconf): handle lack of an 802-11-wireless-security
			setting; open networks don't need one

2007-09-14  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (read_connection_from_gconf): use the right gconf key

2007-09-14  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (applet_dbus_connection_settings_init): don't create a new NMConnection
			that's just going to get thrown away immediately anyway

2007-09-14  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (applet_dbus_settings_add_connection): send out NewConnection signal
			when adding a new connection

2007-09-14  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (foo_set_icon): don't redraw the applet icon if nothing has actually
			changed

2007-09-14  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_menu_item_activate): set the SSID of the new connection so that