@@ -1,5 +1,10 @@
 2007-09-19  Rodrigo Moya <rodrigo@gnome-db.org>
 
+	* src/connection-editor.c: fixed compilation warnings.
+	(wireless_*_changed): added missing callbacks for wireless options.
+
+2007-09-19  Rodrigo Moya <rodrigo@gnome-db.org>
+
 	* src/connection-editor: new connection editor.
 
 	* configure.ac: added connection editor to the build.
